Fixed long tag display overflow

--- a/assets/scss/pages/event_details.scss
+++ b/assets/scss/pages/event_details.scss
@@ -16,6 +16,12 @@
 
 	.detail-item {
 	  margin-bottom: 1rem;
+
+	  .tags a {
+		max-width: 100%;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	  }
 	}
   }
 }
